--- a/references.bib
+++ b/references.bib
@@ -683,4 +683,24 @@
 	year = {2022},
 	note = {original-date: 2020-06-28T20:16:29Z},
 }
+    
+@misc{noauthor_rayon-lh_nodate,
+	title = {Rayon-{LH} {Benchmarks}},
+	url = {https://github.com/neilweidinger/latency-hiding-rayon-benchmarks},
+	abstract = {Contribute to neilweidinger/latency-hiding-rayon-benchmarks development by creating an account on GitHub.},
+	language = {en},
+	urldate = {2022-04-06},
+	journal = {GitHub},
+	file = {Snapshot:/Users/neilweidinger/Zotero/storage/PEHMHB66/latency-hiding-rayon-benchmarks.html:text/html},
+}
 
+@article{ristov_superlinear_2016,
+	title = {Superlinear speedup in {HPC} systems: {Why} and when?},
+	shorttitle = {Superlinear speedup in {HPC} systems},
+	doi = {10.15439/2016F498},
+	abstract = {This paper analyzes several different superlinear speedup types and defines a taxonomy for them, and presents several explanations and cases of superlinearity existence for different types of granular algorithms (tasks), which means that they can be divided into many sub-tasks and scattered to the processors for execution. The speedup is usually limited by two main laws in high-performance computing, that is, the Amdahl's and Gustafson's laws. However, the speedup sometimes can reach far beyond the limited linear speedup, known as superlinear speedup, which means that the speedup is greater than the number of processors that are used. Although the superlinear speedup is not a new concept and many authors have already reported its existence, most of them reported it as a side effect, without explaining why and how it is happening. In this paper, we analyze several different superlinear speedup types and define a taxonomy for them. Additionally, we present several explanations and cases of superlinearity existence for different types of granular algorithms (tasks), which means that they can be divided into many sub-tasks and scattered to the processors for execution. Apart from frequent explanation that having more cache memory in parallel execution is the main reason, we summarize other different effects that cause the superlinearity, including the superlinear speedup in cloud virtual environment for both vertical and horizontal scaling.},
+	journal = {2016 Federated Conference on Computer Science and Information Systems (FedCSIS)},
+	author = {Ristov, S. and Prodan, R. and Gusev, M. and Skala, K.},
+	year = {2016},
+	file = {Full Text:/Users/neilweidinger/Zotero/storage/YWEADG4L/Ristov et al. - 2016 - Superlinear speedup in HPC systems Why and when.pdf:application/pdf},
+}
